cleanup up list styles

--- a/_includes/lists.html
+++ b/_includes/lists.html
@@ -1,196 +1,172 @@
-<h5>no-bullets</h5>
+<h5><code>is-list</code></h5>
 
-<ul class="no-bullets">
+<ul class="is-list">
     <li>Babe Ruth</li>
     <li>Willie Mays</li>
     <li>Mookie Wilson</li>
 </ul>
 
-<h5>no-bullets is-annotated</h5>
+<h5><code>is-list no-bullets</code></h5>
 
-<ul class="no-bullets is-annotated">
+<ul class="is-list no-bullets">
+    <li>Babe Ruth</li>
+    <li>Willie Mays</li>
+    <li>Mookie Wilson</li>
+</ul>
+
+<h5><code>is-list no-bullets is-annotated</code></h5>
+
+<ul class="is-list no-bullets is-annotated">
     <li><span>Player</span><span></span><span>Babe Ruth</span></li>
     <li><span>Player</span><span></span><span>Willie Mays</span></li>
     <li><span>Player</span><span></span><span>Mookie Wilson</span></li>
 </ul>
 
-<h5>is-dot</h5>
+<h5><code>is-list is-dot</code></h5>
 
-<ul class="is-dot">
+<ul class="is-list is-dot">
     <li>Babe Ruth</li>
     <li>Willie Mays</li>
     <li>Mookie Wilson</li>
 </ul>
 
-<h5>is-dot is-annotated</h5>
+<h5><code>is-list is-dot is-annotated</code></h5>
 
-<ul class="is-dot is-annotated">
+<ul class="is-list is-dot is-annotated">
     <li><span>Player</span><span></span><span>Babe Ruth</span></li>
     <li><span>Player</span><span></span><span>Willie Mays</span></li>
     <li><span>Player</span><span></span><span>Mookie Wilson</span></li>
 </ul>
 
-<h5>is-dot is-sublist</h5>
+<h5><code>is-list is-sublist is-dot is-annotated</code></h5>
 
-<ul class="is-dot is-sublist">
-    <li>Players
-        <ul class="is-dot is-sublist">
-            <li>Babe Ruth</li>
-            <li>Willie Mays</li>
-            <li>Mookie Wilson</li>
-        </ul>
-    </li>
-</ul>
-
-<h5>is-dot is-sublist is-annotated</h5>
-
-<ul class="is-dot is-sublist is-annotated">
-    <li>Players
-        <ul class="is-dot is-sublist is-annotated">
-            <li><span>Player</span><span></span><span>Babe Ruth</span></li>
-            <li><span>Player</span><span></span><span>Willie Mays</span></li>
-            <li><span>Player</span><span></span><span>Mookie Wilson</span></li>
-        </ul>
-    </li>
-</ul>
-
-<h5>is-dot is-sublist is-annotated</h5>
-
-<ul class="is-dot">
-    <li><strong>Players: </strong>
-        <ul class="is-dot">
-            <li><strong>Player: </strong>Babe Ruth
-                <ul class="is-dot is-sublist">
-                    <li><strong>HR: </strong>714</li>
-                    <li><strong>AVG: </strong>.342</li>
-                    <li><strong>HITS: </strong>2873</li>
+<ul class="is-list is-sublist is-dot is-annotated">
+    <li><span>Players</span><span></span>
+        <ul class="is-list is-sublist is-dot is-annotated">
+            <li><span>Player</span><span></span><span>Babe Ruth</span>
+                <ul class="is-list is-sublist is-dot is-annotated">
+                    <li><span>Player</span><span></span><span>Babe Ruth</span></li>
+                    <li><span>Player</span><span></span><span>Willie Mays</span></li>
+                    <li><span>Player</span><span></span><span>Mookie Wilson</span></li>
                 </ul>
             </li>
-            <li><strong>Player: </strong>Willie Mays
-                <ul class="is-dot is-sublist">
-                    <li><strong>HR: </strong>660</li>
-                    <li><strong>AVG: </strong>.301</li>
-                    <li><strong>HITS: </strong>3293</li>
+            <li><span>Player</span><span></span><span>Willie Mays</span>
+                <ul class="is-list is-sublist is-dot is-annotated">
+                    <li><span>Player</span><span></span><span>Babe Ruth</span></li>
+                    <li><span>Player</span><span></span><span>Willie Mays</span></li>
+                    <li><span>Player</span><span></span><span>Mookie Wilson</span></li>
                 </ul>
             </li>
-            <li><strong>Player: </strong>Mookie Wilson
-                <ul class="is-dot is-sublist">
-                    <li><strong>HR: </strong>67</li>
-                    <li><strong>AVG: </strong>.274</li>
-                    <li><strong>HITS: </strong>1397</li>
+            <li><span>Player</span><span></span><span>Mookie Wilson</span>
+                <ul class="is-list is-sublist is-dot is-annotated">
+                    <li><span>Player</span><span></span><span>Babe Ruth</span></li>
+                    <li><span>Player</span><span></span><span>Willie Mays</span></li>
+                    <li><span>Player</span><span></span><span>Mookie Wilson</span></li>
                 </ul>
             </li>
         </ul>
     </li>
 </ul>
 
-<h4>is-circle</h4>
+<h5><code>is-list is-circle</code></h5>
 
-<ul class="is-circle">
+<ul class="is-list is-circle">
     <li>Babe Ruth</li>
     <li>Willie Mays</li>
     <li>Mookie Wilson</li>
 </ul>
 
-<h4>is-triangle</h4>
+<h5><code>is-list is-triangle</code></h5>
 
-<ul class="is-triangle">
+<ul class="is-list is-triangle">
     <li>Babe Ruth</li>
     <li>Willie Mays</li>
     <li>Mookie Wilson</li>
 </ul>
 
-<h4>is-star</h4>
+<h5><code>is-list is-star</code></h5>
 
-<ul class="is-star">
+<ul class="is-list is-star">
     <li>Babe Ruth</li>
     <li>Willie Mays</li>
     <li>Mookie Wilson</li>
 </ul>
 
-<h4>is-snowflake</h4>
+<h5><code>is-list is-snowflake</code></h5>
 
-<ul class="is-snowflake">
+<ul class="is-list is-snowflake">
     <li>Babe Ruth</li>
     <li>Willie Mays</li>
     <li>Mookie Wilson</li>
 </ul>
 
-<h4>is-plus</h4>
+<h5><code>is-list is-plus</code></h5>
 
-<ul class="is-plus">
+<ul class="is-list is-plus">
     <li>Babe Ruth</li>
     <li>Willie Mays</li>
     <li>Mookie Wilson</li>
 </ul>
 
-<h4>is-dash</h4>
+<h5><code>is-list is-dash</code></h5>
 
-<ul class="is-dash">
+<ul class="is-list is-dash">
     <li>Babe Ruth</li>
     <li>Willie Mays</li>
     <li>Mookie Wilson</li>
 </ul>
 
-<h4>is-asterisk</h4>
+<h5><code>is-list is-asterisk</code></h5>
 
-<ul class="is-asterisk">
+<ul class="is-list is-asterisk">
     <li>Babe Ruth</li>
     <li>Willie Mays</li>
     <li>Mookie Wilson</li>
 </ul>
 
-<h4>is-hash</h4>
+<h5><code>is-list is-hash</code></h5>
 
-<ul class="is-hash">
+<ul class="is-list is-hash">
     <li>Babe Ruth</li>
     <li>Willie Mays</li>
     <li>Mookie Wilson</li>
 </ul>
 
-<h4>is-equalsign</h4>
+<h5><code>is-list is-equalsign</code></h5>
 
-<ul class="is-equalsign">
+<ul class="is-list is-equalsign">
     <li>Babe Ruth</li>
     <li>Willie Mays</li>
     <li>Mookie Wilson</li>
 </ul>
 
-<h4>is-greaterthansign</h4>
+<h5><code>is-list is-greaterthansign</code></h5>
 
-<ul class="is-greaterthansign">
+<ul class="is-list is-greaterthansign">
     <li>Babe Ruth</li>
     <li>Willie Mays</li>
     <li>Mookie Wilson</li>
 </ul>
 
-<h4>is-lessthansign</h4>
+<h5><code>is-list is-lessthansign</code></h5>
 
-<ul class="is-lessthansign">
+<ul class="is-list is-lessthansign">
     <li>Babe Ruth</li>
     <li>Willie Mays</li>
     <li>Mookie Wilson</li>
 </ul>
 
-<h4>is-tilde</h4>
+<h5><code>is-list is-tilde</code></h5>
 
-<ul class="is-tilde">
+<ul class="is-list is-tilde">
     <li>Babe Ruth</li>
     <li>Willie Mays</li>
     <li>Mookie Wilson</li>
 </ul>
 
-<h4>is-test</h4>
+<h5><code>is-list has-border</code></h5>
 
-<ul class="is-test">
-    <li>Babe Ruth</li>
-    <li>Willie Mays</li>
-    <li>Mookie Wilson</li>
-</ul>
-
-<h4>has-border</h4>
-
-<ul class="has-border">
+<ul class="is-list has-border">
     <li>Babe Ruth</li>
     <li>Willie Mays</li>
     <li>Mookie Wilson</li>
