WIP org scss, building out container capabilities

--- a/css/main.scss
+++ b/css/main.scss
@@ -19,103 +19,4 @@
 @import "yolo/lightbox";
 @import "yolo/prezos";
 @import "yolo/syntax";
-
-
-.back-to-top {
-  display: block;
-  color: $yolo-accent-color;
-  text-align: right;
-  text-decoration: none;
-}
-
-.code-header {
-  width: 100%;
-  font-family: $family-secondary;
-  font-weight: bold;
-  padding: 0.3em 0.3em 0.3em 0.4em;
-  vertical-align: middle;
-  background-color: $yolo-table-header-color;
-  color: $yolo-table-header-text-color;
-  border-top-left-radius: 0.3em;
-  border-top-right-radius: 0.3em;
-
-  &:is(.copied, :hover) {
-    background-color: $yolo-accent-color;
-    color: $yolo-dark-color;
-  }
-
-  &.copied {
-    background-color: $yolo-table-header-color;
-  }
-}
-
-.video {
-  //text-align: center;
-  width: 100%;
-  iframe {
-    width: 300px;
-    height: 533px;
-    border: none;
-    border-radius: 0.5em;
-  }
-}
-
-.pill {
-  display: inline-flex;
-  align-items: center;
-  background-color: $yolo-pill-color;
-  color: $yolo-pill-text-color;
-  font-family: $family-monospace;
-  text-decoration: none;
-  padding: 0.25rem 1rem;
-  font-size: 16px;
-  border-radius: 3rem;
-}
-
-.pill:hover {
-  background-color: $yolo-accent-color;
-}
-
-.rotate {
-  animation: rotation 5s infinite linear;
-}
-
-@keyframes rotation {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(359deg);
-  }
-}
-
-.yolo-primary-color {
-  color: $yolo-primary-color;
-}
-.yolo-secondary-color {
-  color: $yolo-secondary-color;
-}
-.yolo-background-color {
-  color: $yolo-background-color;
-}
-.yolo-dark-color {
-  color: $yolo-dark-color;
-}
-.yolo-accent-color {
-  color: $yolo-accent-color;
-}
-.yolo-code-background-color {
-  color: $yolo-code-background-color;
-}
-.yolo-text-secondary-color {
-  color: $yolo-text-secondary-color;
-}
-.yolo-text-primary-color {
-  color: $yolo-text-primary-color;
-}
-.yolo-header-color {
-  color: $yolo-header-color;
-}
-.yolo-code-primary-color {
-  color: $yolo-code-primary-color;
-}
+@import "yolo/yolo";
