--- a/_sass/yolo/themes/_cloudy.scss
+++ b/_sass/yolo/themes/_cloudy.scss
@@ -7,7 +7,7 @@ $yolo-secondary-color: #342077 !default;
 // base colors
 $yolo-background-color: #e9f4fe !default;
 $yolo-text-primary-color: #32439e !default;
-$yolo-text-secondary-color: #0099ab !default;
+$yolo-text-secondary-color: #ef0c81 !default;
 $yolo-text-accent-color: #00b0ff !default;
 
 // convenient colors
@@ -19,7 +19,7 @@ $yolo-accent-color: #0091ea !default;
 
 // code colors
 $yolo-code-background-color: #000928 !default;
-$yolo-code-primary-color: #ff31b9 !default;
+$yolo-code-primary-color: #ef0c81 !default;
 $yolo-code-secondary-color: #65e9fc !default;
 
 // element colors
@@ -27,8 +27,8 @@ $yolo-link-color: #0091ea !default;
 $yolo-header-color: #1763d4 !default;
 $yolo-pill-color: #342077 !default;
 $yolo-pill-text-color: #9ce9fb !default;
-$yolo-table-header-color: #ff31b9 !default;
-$yolo-table-border-color: #ff31b9 !default;
+$yolo-table-header-color: #ef0c81 !default;
+$yolo-table-border-color: #ef0c81 !default;
 $yolo-table-header-text-color: #000d55 !default;
 
 // fonts
