--- a/_sass/yolo/themes/_dark.scss
+++ b/_sass/yolo/themes/_dark.scss
@@ -2,33 +2,33 @@
 // dark theme
 // ----------------------------------------------------------------------------
 $yolo-primary-color: #0e0e0e !default;
-$yolo-secondary-color: #fafafa !default;
+$yolo-secondary-color: #e3f2fd !default;
 
 // base colors
 $yolo-background-color: #0e0e0e !default;
-$yolo-text-primary-color: #e0e0e0 !default;
-$yolo-text-secondary-color: #bdbdbd !default;
-$yolo-text-accent-color: #0de5ff !default;
+$yolo-text-primary-color: #e3f2fd !default;
+$yolo-text-secondary-color: #00e676 !default;
+$yolo-text-accent-color: #ff6d00 !default;
 
 // convenient colors
 $yolo-text-dark-color: #0e0e0e !default;
 $yolo-text-light-color: #e0e0e0 !default;
 $yolo-dark-color: #0e0e0e !default;
 $yolo-light-color: #e0e0e0 !default;
-$yolo-accent-color: #0de5ff !default;
+$yolo-accent-color: #ff6d00 !default;
 
 // code colors
 $yolo-code-background-color: #000 !default;
-$yolo-code-primary-color: #e0e0e0 !default;
+$yolo-code-primary-color: #e3f2fd !default;
 $yolo-code-secondary-color: #bdbdbd !default;
 
-// element colors
-$yolo-link-color: #0de5ff !default;
-$yolo-header-color: #ba9afd !default;
-$yolo-pill-color: #fff !default;
+// element colors00b0ff
+$yolo-link-color: #e91e63 !default;
+$yolo-header-color: #00b0ff !default;
+$yolo-pill-color: #00e676 !default;
 $yolo-pill-text-color: #000 !default;
-$yolo-table-header-color: #ba9afd !default;
-$yolo-table-border-color: #ba9afd !default;
+$yolo-table-header-color: #00b0ff !default;
+$yolo-table-border-color: #00b0ff !default;
 $yolo-table-header-text-color: #151515 !default;
 
 // fonts
