--- a/_sass/yolo/_lists.scss
+++ b/_sass/yolo/_lists.scss
@@ -7,7 +7,7 @@ ul {
   padding-left: 1.5rem;
 
   li {
-    color: $yolo-text-light-color;
+    color: $yolo-text-primary-color;
   }
   ::marker {
     color: $yolo-accent-color;
@@ -20,7 +20,7 @@ ol {
   padding-left: 2.5rem;
 
   li {
-    color: $yolo-text-light-color;
+    color: $yolo-text-primary-color;
   }
   ::marker {
     color: $yolo-accent-color;
