add left and center on container

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,7 +2,7 @@
 <html>
 {% include head.html %}
 <body>
-  <div class="container">
+  <div id="yolo-container" class="container left">
     {% include header.html %}
     {{ content }}
     {% include footer.html %}
