--- a/_sass/yolo/_variables.scss
+++ b/_sass/yolo/_variables.scss
@@ -54,10 +54,10 @@ $tablet: 769px !default;
 $desktop: 960px + (2 * $gap) !default;
 // 1152px container + 4rem
 $widescreen: 1152px + (2 * $gap) !default;
-$widescreen-enabled: true !default;
+$widescreen-enabled: false !default;
 // 1344px container + 4rem
 $fullhd: 1344px + (2 * $gap) !default;
-$fullhd-enabled: true !default;
+$fullhd-enabled: false !default;
 $breakpoints: ("mobile": ("until": $tablet),
   "tablet": ("from": $tablet),
   "tablet-only": ("from": $tablet, "until": $desktop),
