--- a/_sass/yolo/_yolo.scss
+++ b/_sass/yolo/_yolo.scss
@@ -15,6 +15,11 @@
   overflow: auto;
 }
 
+.caption-container {
+  text-align: center;
+  padding: 1rem;
+}
+
 // back to top link styling
 .back-to-top {
   display: block;
