--- a/_includes/image/lightbox.html
+++ b/_includes/image/lightbox.html
@@ -35,7 +35,7 @@
             <a class="lb-nav lb-next" onclick="Yolo.lightbox('{{ lb_data }}').plusSlides(1);">&#10095;</a>
         </div>
         <!-- Caption text -->
-        <div class="caption-container">
+        <div class="caption">
             <p id="lb-caption-{{ lb_data }}"></p>
         </div>
     </div>
