--- a/_sass/yolo/_syntax.scss
+++ b/_sass/yolo/_syntax.scss
@@ -3,7 +3,7 @@
 // ----------------------------------------------------------------------------
 pre, code {
   font-family: $family-monospace;
-  color: $yolo-code-primary-color;
+  color: $yolo-code-color;
 }
 
 pre {
