--- a/_sass/yolo/_base.scss
+++ b/_sass/yolo/_base.scss
@@ -15,8 +15,8 @@ html {
 
 body {
   margin: 2rem 0 5rem;
-  color: $yolo-text-primary-color;
-  background-color: $yolo-background-color;
+  color: $yolo-secondary-color;
+  background-color: $yolo-primary-color;
 }
 
 a {
@@ -32,7 +32,6 @@ h1, h2, h3, h4, h5, h6 {
   font-family: $family-secondary, sans-serif;
   margin: 0 0 0.5rem 0rem;
   line-height: 1;
-  color: $yolo-text-primary-color;
   text-rendering: optimizeLegibility;
 }
 
@@ -40,7 +39,7 @@ h1 {
   margin-top: 1.5rem;
   font-size: 2.75rem;
   margin-bottom: 1rem;
-  color: $yolo-header-color;
+  color: $yolo-accent-color;
 }
 
 h1 a {
@@ -51,35 +50,35 @@ h2 {
   margin-top: 1.5rem;
   font-size: 2rem;
   margin-bottom: 1rem;
-  color: $yolo-header-color;
+  color: $yolo-accent-color;
 }
 
 h3 {
   margin-top: 1.5rem;
   font-size: 1.75rem;
   margin-bottom: 1rem;
-  color: $yolo-header-color;
+  color: $yolo-accent-color;
 }
 
 h4 {
   margin-top: 1.5rem;
   font-size: 1.5rem;
   margin-bottom: 1rem;
-  color: $yolo-header-color;
+  color: $yolo-accent-color;
 }
 
 h5 {
   margin-top: 1.5rem;
   font-size: 1.25rem;
   margin-bottom: 1rem;
-  color: $yolo-header-color;
+  color: $yolo-accent-color;
 }
 
 h6 {
   margin-top: 1.5rem;
   font-size: 1rem;
   margin-bottom: 1rem;
-  color: $yolo-header-color;
+  color: $yolo-accent-color;
 }
 
 p, ul, ol, dl, table, pre, blockquote {
@@ -99,8 +98,7 @@ blockquote {
   margin-left: 0;
   margin-right: 0;
   padding: .5rem 1rem;
-  border-left: .25rem solid $yolo-text-primary-color;
-  color: $yolo-text-secondary-color;
+  border-left: .25rem solid $yolo-accent-color;
 }
 
 blockquote p:last-child {
