--- a/_sass/yolo/_lightbox.scss
+++ b/_sass/yolo/_lightbox.scss
@@ -73,7 +73,7 @@
   width: 100%;
   height: 100%;
   overflow: auto;
-  background-color: $yolo-dark-color;
+  background-color: $yolo-primary-color;
 }
 
 .lb-modal-content {
@@ -95,7 +95,7 @@
 
 .lb-close:hover,
 .lb-close:focus {
-  color: $yolo-text-primary-color;
+  color: $yolo-secondary-color;
   text-decoration: none;
   cursor: pointer;
 }
@@ -127,7 +127,7 @@
   }
 
   &:hover {
-    background-color: rgba($yolo-dark-color, 0.3);
+    background-color: rgba($yolo-accent-color, 0.3);
     text-decoration: none;
   }
 }
