--- a/_sass/yolo/_tables.scss
+++ b/_sass/yolo/_tables.scss
@@ -8,18 +8,18 @@ table {
 
 th {
   font-weight: bold;
-  border-top: 1px solid $yolo-table-border-color;
+  border-top: 1px solid $yolo-secondary-color;
 }
 
 th, td {
-  border-bottom: 1px solid $yolo-table-border-color;
-  border-left: 1px solid $yolo-table-border-color;
-  border-right: 1px solid $yolo-table-border-color;
+  border-bottom: 1px solid $yolo-secondary-color;
+  border-left: 1px solid $yolo-secondary-color;
+  border-right: 1px solid $yolo-secondary-color;
 }
 
 thead {
-  background-color: $yolo-table-header-color;
-  color: $yolo-table-header-text-color;
+  background-color: $yolo-secondary-color;
+  color: $yolo-primary-color;
   font-family: $family-secondary;
 }
 
