--- a/_sass/yolo/_yolo.scss
+++ b/_sass/yolo/_yolo.scss
@@ -15,7 +15,7 @@
   overflow: auto;
 }
 
-.caption-container {
+.caption {
   text-align: center;
   padding: 1rem;
 }
@@ -35,18 +35,17 @@
   font-weight: bold;
   padding: 0.3em 0.3em 0.3em 0.4em;
   vertical-align: middle;
-  background-color: $yolo-table-header-color;
-  color: $yolo-table-header-text-color;
+  background-color: $yolo-secondary-color;
+  color: $yolo-primary-color;
   border-top-left-radius: 0.3em;
   border-top-right-radius: 0.3em;
 
   &:is(.copied, :hover) {
     background-color: $yolo-accent-color;
-    color: $yolo-dark-color;
   }
 
   &.copied {
-    background-color: $yolo-table-header-color;
+    background-color: $yolo-secondary-color;
   }
 }
 
@@ -66,8 +65,8 @@
 .pill {
   display: inline-flex;
   align-items: center;
-  background-color: $yolo-pill-color;
-  color: $yolo-pill-text-color;
+  background-color: $yolo-secondary-color;
+  color: $yolo-primary-color;
   font-family: $family-monospace;
   text-decoration: none;
   padding: 0.25rem 1rem;
@@ -93,35 +92,28 @@
   }
 }
 
-// yolo color classes
+// yolo fill color classes
 .yolo-primary-color {
-  color: $yolo-primary-color;
-}
-.yolo-secondary-color {
+  background-color: $yolo-primary-color;
   color: $yolo-secondary-color;
 }
-.yolo-background-color {
-  color: $yolo-background-color;
-}
-.yolo-dark-color {
-  color: $yolo-dark-color;
+.yolo-secondary-color {
+  background-color: $yolo-secondary-color;
+  color: $yolo-primary-color;
 }
 .yolo-accent-color {
-  color: $yolo-accent-color;
+  background-color: $yolo-accent-color;
+  color: $yolo-primary-color;
 }
 .yolo-code-background-color {
+  background-color: $yolo-code-background-color;
+  color: $yolo-code-color;
+}
+.yolo-code-color {
+  background-color: $yolo-code-color;
   color: $yolo-code-background-color;
 }
-.yolo-text-secondary-color {
-  color: $yolo-text-secondary-color;
+.yolo-link-color {
+  background-color: $yolo-link-color;
+  color: $yolo-primary-color;
 }
-.yolo-text-primary-color {
-  color: $yolo-text-primary-color;
-}
-.yolo-header-color {
-  color: $yolo-header-color;
-}
-.yolo-code-primary-color {
-  color: $yolo-code-primary-color;
-}
-
