--- a/_sass/yolo/themes/_logrey.scss
+++ b/_sass/yolo/themes/_logrey.scss
@@ -1,35 +1,35 @@
 // ----------------------------------------------------------------------------
-// elderly theme
+// logrey theme
 // ----------------------------------------------------------------------------
-$yolo-primary-color: #fbffff !default;
-$yolo-secondary-color: #342077 !default;
+$yolo-primary-color: #37474f !default;
+$yolo-secondary-color: #180440 !default;
 
 // base colors
-$yolo-background-color: #fbffff !default;
-$yolo-text-primary-color: #342077 !default;
-$yolo-text-secondary-color: #950c67 !default;
-$yolo-text-accent-color: #00b0ff !default;
+$yolo-background-color: #e0e0e0 !default;
+$yolo-text-primary-color: #37474f !default;
+$yolo-text-secondary-color: #e0e0e0 !default;
+$yolo-text-accent-color: #180440 !default;
 
 // convenient colors
-$yolo-text-dark-color: #000d55 !default;
-$yolo-text-light-color: #ff80cd !default;
-$yolo-dark-color: #020827 !default;
-$yolo-light-color: #7a85ff !default;
-$yolo-accent-color: #00b0ff !default;
+$yolo-text-dark-color: #51636d !default;
+$yolo-text-light-color: #f5f5f5 !default;
+$yolo-dark-color: #37474f !default;
+$yolo-light-color: #f5f5f5 !default;
+$yolo-accent-color: #180440 !default;
 
 // code colors
-$yolo-code-background-color: #061039 !default;
-$yolo-code-primary-color: #037cb3 !default;
+$yolo-code-background-color: #37474f !default;
+$yolo-code-primary-color: #f5f5f5 !default;
 $yolo-code-secondary-color: #1dab58 !default;
 
 // element colors
-$yolo-link-color: #037cb3 !default;
-$yolo-header-color: #000d55 !default;
-$yolo-pill-color: #342077 !default;
-$yolo-pill-text-color: #9ce9fb !default;
-$yolo-table-header-color: #5e35b1 !default;
-$yolo-table-border-color: #5e35b1 !default;
-$yolo-table-header-text-color: #9ce9fb !default;
+$yolo-link-color: #0d47a1 !default;
+$yolo-header-color: #000 !default;
+$yolo-pill-color: #37474f !default;
+$yolo-pill-text-color: #fafafa !default;
+$yolo-table-header-color: #000 !default;
+$yolo-table-border-color: #000 !default;
+$yolo-table-header-text-color: #f5f5f5 !default;
 
 // fonts
 $family-primary: "Red Hat Mono", sans-serif;
