Done with theme refactor

--- a/_sass/yolo/themes/_arcade.scss
+++ b/_sass/yolo/themes/_arcade.scss
@@ -2,35 +2,11 @@
 // arcade theme
 // ----------------------------------------------------------------------------
 $yolo-primary-color: #000928 !default;
-$yolo-secondary-color: #6200ea !default;
-
-// base colors
-$yolo-background-color: #000928 !default;
-$yolo-text-primary-color: #00e676 !default;
-$yolo-text-secondary-color: #ff31b9 !default;
-$yolo-text-accent-color: #00b0ff !default;
-
-// convenient colors
-$yolo-text-dark-color: #000d55 !default;
-$yolo-text-light-color: #eab0d2 !default;
-$yolo-dark-color: #00080f !default;
-$yolo-light-color: #a5abf9 !default;
+$yolo-secondary-color: #00e676 !default;
 $yolo-accent-color: #596ef8 !default;
-
-// code colors
 $yolo-code-background-color: #00080f !default;
-$yolo-code-primary-color: #65e9fc !default;
-$yolo-code-secondary-color: #00e676 !default;
-
-// element colors
-$yolo-link-color: #00b0ff !default;
-$yolo-header-color: #9c7bf6 !default;
-$yolo-pill-color: #5703c8 !default;
-$yolo-pill-text-color: #9ce9fb !default;
-$yolo-table-header-color: #adfff5 !default;
-$yolo-table-border-color: #adfff5 !default;
-$yolo-table-header-text-color: #000928 !default;
-
+$yolo-code-color: #65e9fc !default;
+$yolo-link-color: #ff31b9 !default;
 // fonts
 $family-primary: "Roboto Mono", sans-serif;
 $family-secondary: "Raleway", sans-serif;
