--- a/_sass/yolo/themes/_cloudy.scss
+++ b/_sass/yolo/themes/_cloudy.scss
@@ -2,35 +2,11 @@
 // cloudy theme
 // ----------------------------------------------------------------------------
 $yolo-primary-color: #e9f4fe !default;
-$yolo-secondary-color: #342077 !default;
-
-// base colors
-$yolo-background-color: #e9f4fe !default;
-$yolo-text-primary-color: #32439e !default;
-$yolo-text-secondary-color: #ef0c81 !default;
-$yolo-text-accent-color: #00b0ff !default;
-
-// convenient colors
-$yolo-text-dark-color: #000d55 !default;
-$yolo-text-light-color: #ff80cd !default;
-$yolo-dark-color: #e9f4fe !default;
-$yolo-light-color: #7a85ff !default;
+$yolo-secondary-color: #32439e !default;
 $yolo-accent-color: #0091ea !default;
-
-// code colors
 $yolo-code-background-color: #000928 !default;
-$yolo-code-primary-color: #ef0c81 !default;
-$yolo-code-secondary-color: #65e9fc !default;
-
-// element colors
-$yolo-link-color: #0091ea !default;
-$yolo-header-color: #1763d4 !default;
-$yolo-pill-color: #342077 !default;
-$yolo-pill-text-color: #9ce9fb !default;
-$yolo-table-header-color: #ef0c81 !default;
-$yolo-table-border-color: #ef0c81 !default;
-$yolo-table-header-text-color: #000d55 !default;
-
+$yolo-code-color: #17ba59 !default;
+$yolo-link-color: #ef0c81 !default;
 // fonts
 $family-primary: "Roboto Mono", sans-serif;
 $family-secondary: "Raleway", sans-serif;
