--- a/_sass/yolo/themes/_dark.scss
+++ b/_sass/yolo/themes/_dark.scss
@@ -2,35 +2,11 @@
 // dark theme
 // ----------------------------------------------------------------------------
 $yolo-primary-color: #0e0e0e !default;
-$yolo-secondary-color: #e3f2fd !default;
-
-// base colors
-$yolo-background-color: #0e0e0e !default;
-$yolo-text-primary-color: #e3f2fd !default;
-$yolo-text-secondary-color: #00e676 !default;
-$yolo-text-accent-color: #ff6d00 !default;
-
-// convenient colors
-$yolo-text-dark-color: #0e0e0e !default;
-$yolo-text-light-color: #e0e0e0 !default;
-$yolo-dark-color: #0e0e0e !default;
-$yolo-light-color: #e0e0e0 !default;
-$yolo-accent-color: #ff6d00 !default;
-
-// code colors
+$yolo-secondary-color: #d1ecfb !default;
+$yolo-accent-color: #00b0ff !default;
 $yolo-code-background-color: #000 !default;
-$yolo-code-primary-color: #e3f2fd !default;
-$yolo-code-secondary-color: #bdbdbd !default;
-
-// element colors00b0ff
-$yolo-link-color: #e91e63 !default;
-$yolo-header-color: #00b0ff !default;
-$yolo-pill-color: #00e676 !default;
-$yolo-pill-text-color: #000 !default;
-$yolo-table-header-color: #00b0ff !default;
-$yolo-table-border-color: #00b0ff !default;
-$yolo-table-header-text-color: #151515 !default;
-
+$yolo-code-color: #00e676 !default;
+$yolo-link-color: #f7346d !default;
 // fonts
 $family-primary: "Inconsolata", sans-serif;
 $family-secondary: "Raleway", sans-serif;
