--- a/_sass/yolo/themes/_naturalist.scss
+++ b/_sass/yolo/themes/_naturalist.scss
@@ -1,13 +1,13 @@
 // ----------------------------------------------------------------------------
-// logrey theme
+// naturalist theme
 // ----------------------------------------------------------------------------
 // colors
-$yolo-primary-color: #eeeeee !default;
-$yolo-secondary-color: #424242 !default;
-$yolo-accent-color: #546e7a !default;
-$yolo-code-background-color: #192424 !default;
-$yolo-code-color: #0eb553 !default;
-$yolo-link-color: #0091ea !default;
+$yolo-primary-color: #1b0000 !default;
+$yolo-secondary-color: #efebe9 !default;
+$yolo-accent-color: #00c853 !default;
+$yolo-code-background-color: #3e2723 !default;
+$yolo-code-color: #b9f6ca !default;
+$yolo-link-color: #00b0ff !default;
 // fonts
 $family-primary: "Red Hat Mono", sans-serif;
 $family-secondary: "Open Sans", sans-serif;
