--- a/_sass/yolo/themes/_none.scss
+++ b/_sass/yolo/themes/_none.scss
@@ -2,12 +2,12 @@
 // logrey theme
 // ----------------------------------------------------------------------------
 // colors
-$yolo-primary-color: #eeeeee !default;
-$yolo-secondary-color: #424242 !default;
-$yolo-accent-color: #546e7a !default;
-$yolo-code-background-color: #192424 !default;
-$yolo-code-color: #0eb553 !default;
-$yolo-link-color: #0091ea !default;
+$yolo-primary-color: #fff !default;
+$yolo-secondary-color: #000 !default;
+$yolo-accent-color: #000 !default;
+$yolo-code-background-color: #000 !default;
+$yolo-code-color: #848484 !default;
+$yolo-link-color: #00b0ff !default;
 // fonts
 $family-primary: "Red Hat Mono", sans-serif;
 $family-secondary: "Open Sans", sans-serif;
