Remove hover on images

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,7 +1,7 @@
 <div class="site-header">
     {% if site.logo %}
     <a href="./">
-        <img class="logo" src="{{ site.logo }}" title="Site Logo">
+        <img class="logo" alt="site-logo" src="{{ site.logo }}" title="Site Logo"/>
     </a>
     {% endif %}
     <h1 class="tag"><a href="./">{{ site.tag_text }}</a></h1>
