--- a/_includes/image/image.html
+++ b/_includes/image/image.html
@@ -4,5 +4,5 @@
   <figcaption>{{ include.description }}</figcaption>
 </figure>
 {% else %}
-<img class="image {{ include.classes }}" src="{{ site.images }}/{{ include.src }}">
+<img class="image {{ include.classes }}" alt="{{ include.src }}" src="{{ site.images }}/{{ include.src }}">
 {% endif %}
