--- a/_sass/yolo/_header.scss
+++ b/_sass/yolo/_header.scss
@@ -6,6 +6,7 @@
     margin-top: 1rem;
     margin-bottom: 0.5rem;
     font-weight: bold;
+    color: $yolo-secondary-color;
   }
   .logo {
     border-radius: 50%;
@@ -18,5 +19,6 @@
     font-weight: lighter;
     margin-top: 0;
     margin-bottom: 1rem;
+    color: $yolo-accent-color;
   }
 }
