--- a/_sass/yolo/_yolo.scss
+++ b/_sass/yolo/_yolo.scss
@@ -1,13 +1,9 @@
 // ----------------------------------------------------------------------------
 // yolo specific classes
 // ----------------------------------------------------------------------------
-#yolo-container {
-
-}
-
 .left {
   margin-right: auto;
-  margin-left: 1rem;
+  margin-left: 0;
 }
 
 .center {
